--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+@plugin "daisyui";
 
 :root {
   --background: #ffffff;
@@ -23,4 +24,12 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+/*  可以通过@layer base来修改不同层级的样式 */
+@layer base {
+  h1 {
+    /*  修改全局 h1 的样式 */
+    @apply font-extrabold text-2xl mb-3;
+  }
 }
